[gd_scene load_steps=3 format=3 uid="uid://wvghsdar3xml"]

[ext_resource type="Theme" uid="uid://ceglvrvxing6v" path="res://theme.tres" id="1_a68si"]
[ext_resource type="Script" path="res://start.gd" id="1_i2iou"]

[node name="start" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a68si")
script = ExtResource("1_i2iou")

[node name="v_box_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="head" type="PanelContainer" parent="v_box_container"]
layout_mode = 2

[node name="row" type="HBoxContainer" parent="v_box_container/head"]
layout_mode = 2

[node name="control" type="MarginContainer" parent="v_box_container/head/row"]
layout_mode = 2

[node name="godot" type="Label" parent="v_box_container/head/row/control"]
layout_mode = 2
theme_override_colors/font_color = Color(0.278431, 0.54902, 0.74902, 1)
theme_override_font_sizes/font_size = 64
text = "G   o   d   o  t"

[node name="chess" type="Label" parent="v_box_container/head/row/control"]
layout_mode = 2
theme_override_colors/font_color = Color(0.568456, 0.337023, 0.125131, 1)
theme_override_font_sizes/font_size = 64
text = "   C   h   e   s  s"

[node name="SPACER" type="Control" parent="v_box_container/head/row"]
layout_mode = 2
size_flags_horizontal = 3

[node name="about" type="Button" parent="v_box_container/head/row"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "About"

[node name="color_rect" type="ColorRect" parent="v_box_container"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="body" type="PanelContainer" parent="v_box_container"]
layout_mode = 2
size_flags_vertical = 3

[node name="h_box_container" type="HBoxContainer" parent="v_box_container/body"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="join" type="MarginContainer" parent="v_box_container/body/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="button" type="Button" parent="v_box_container/body/h_box_container/join"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Join Game"

[node name="host" type="MarginContainer" parent="v_box_container/body/h_box_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="button" type="Button" parent="v_box_container/body/h_box_container/host"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Host Game"

[connection signal="button_down" from="v_box_container/body/h_box_container/join/button" to="." method="_on_join_button_down"]
[connection signal="button_down" from="v_box_container/body/h_box_container/host/button" to="." method="_on_host_button_down"]
